// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemedButton renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#327449",
      "borderRadius": 9999,
      "flexDirection": "row",
      "gap": 10,
      "justifyContent": "center",
      "margin": "auto",
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 8,
    }
  }
>
  <Text />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Outfit",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          {
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Submit
    </Text>
  </View>
</View>
`;

exports[`ThemedButton renders with shadow 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#327449",
      "borderRadius": 9999,
      "elevation": 5,
      "flexDirection": "row",
      "gap": 10,
      "justifyContent": "center",
      "margin": "auto",
      "opacity": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 8,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
    }
  }
>
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 20,
        },
        undefined,
        {
          "fontFamily": "octicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        {},
      ]
    }
  >
    
  </Text>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontFamily": "Outfit",
          },
          {
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          {
            "fontSize": 20,
          },
          undefined,
        ]
      }
    >
      Test
    </Text>
  </View>
</View>
`;
